[gd_scene load_steps=3 format=3 uid="uid://battle_scene_001"]

[ext_resource type="Script" path="res://scripts/battle/Battle.gd" id="1_battle"]
[ext_resource type="Script" path="res://scripts/battle/TurnOrderDisplay.gd" id="2_turn_order"]

[node name="Battle" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_battle")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.1, 0.1, 0.15, 1)

[node name="MainLayout" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 2

[node name="BattleArena" type="VBoxContainer" parent="MainLayout"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 3.0

[node name="TopPanel" type="PanelContainer" parent="MainLayout/BattleArena"]
layout_mode = 2
size_flags_vertical = 3

[node name="VBox" type="VBoxContainer" parent="MainLayout/BattleArena/TopPanel"]
layout_mode = 2

[node name="BurstLabel" type="Label" parent="MainLayout/BattleArena/TopPanel/VBox"]
layout_mode = 2
text = "Burst Gauge"
horizontal_alignment = 1

[node name="BurstGauge" type="ProgressBar" parent="MainLayout/BattleArena/TopPanel/VBox"]
unique_name_in_owner = true
layout_mode = 2
max_value = 100.0
show_percentage = false

[node name="EnemySlots" type="HBoxContainer" parent="MainLayout/BattleArena"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 3.0
alignment = 1

[node name="MiddleSpace" type="Control" parent="MainLayout/BattleArena"]
layout_mode = 2
size_flags_vertical = 3

[node name="AllySlots" type="HBoxContainer" parent="MainLayout/BattleArena"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 3.0
alignment = 1

[node name="BottomPanel" type="HBoxContainer" parent="MainLayout/BattleArena"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 2.0

[node name="BattleLogPanel" type="PanelContainer" parent="MainLayout/BattleArena/BottomPanel"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.0

[node name="ScrollContainer" type="ScrollContainer" parent="MainLayout/BattleArena/BottomPanel/BattleLogPanel"]
layout_mode = 2

[node name="BattleLog" type="RichTextLabel" parent="MainLayout/BattleArena/BottomPanel/BattleLogPanel/ScrollContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
bbcode_enabled = true
fit_content = true
scroll_following = true

[node name="ActionMenu" type="VBoxContainer" parent="MainLayout/BattleArena/BottomPanel"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[node name="Title" type="Label" parent="MainLayout/BattleArena/BottomPanel/ActionMenu"]
layout_mode = 2
text = "Actions"
horizontal_alignment = 1

[node name="AttackButton" type="Button" parent="MainLayout/BattleArena/BottomPanel/ActionMenu"]
layout_mode = 2
text = "Attack"

[node name="SkillButton" type="Button" parent="MainLayout/BattleArena/BottomPanel/ActionMenu"]
layout_mode = 2
text = "Skill"

[node name="ItemButton" type="Button" parent="MainLayout/BattleArena/BottomPanel/ActionMenu"]
layout_mode = 2
text = "Item"

[node name="CaptureButton" type="Button" parent="MainLayout/BattleArena/BottomPanel/ActionMenu"]
layout_mode = 2
text = "Capture"

[node name="DefendButton" type="Button" parent="MainLayout/BattleArena/BottomPanel/ActionMenu"]
layout_mode = 2
text = "Defend"

[node name="BurstButton" type="Button" parent="MainLayout/BattleArena/BottomPanel/ActionMenu"]
layout_mode = 2
text = "Burst"

[node name="RunButton" type="Button" parent="MainLayout/BattleArena/BottomPanel/ActionMenu"]
layout_mode = 2
text = "Run"

[node name="TurnOrderPanel" type="PanelContainer" parent="MainLayout"]
layout_mode = 2
size_flags_horizontal = 3

[node name="VBox" type="VBoxContainer" parent="MainLayout/TurnOrderPanel"]
layout_mode = 2

[node name="Title" type="Label" parent="MainLayout/TurnOrderPanel/VBox"]
layout_mode = 2
text = "Turn Order"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Separator" type="HSeparator" parent="MainLayout/TurnOrderPanel/VBox"]
layout_mode = 2

[node name="ScrollContainer" type="ScrollContainer" parent="MainLayout/TurnOrderPanel/VBox"]
layout_mode = 2
size_flags_vertical = 3

[node name="TurnOrderDisplay" type="VBoxContainer" parent="MainLayout/TurnOrderPanel/VBox/ScrollContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("2_turn_order")

[connection signal="pressed" from="MainLayout/BattleArena/BottomPanel/ActionMenu/AttackButton" to="." method="_on_attack_pressed"]
[connection signal="pressed" from="MainLayout/BattleArena/BottomPanel/ActionMenu/SkillButton" to="." method="_on_skill_pressed"]
[connection signal="pressed" from="MainLayout/BattleArena/BottomPanel/ActionMenu/ItemButton" to="." method="_on_item_pressed"]
[connection signal="pressed" from="MainLayout/BattleArena/BottomPanel/ActionMenu/CaptureButton" to="." method="_on_capture_pressed"]
[connection signal="pressed" from="MainLayout/BattleArena/BottomPanel/ActionMenu/DefendButton" to="." method="_on_defend_pressed"]
[connection signal="pressed" from="MainLayout/BattleArena/BottomPanel/ActionMenu/BurstButton" to="." method="_on_burst_pressed"]
[connection signal="pressed" from="MainLayout/BattleArena/BottomPanel/ActionMenu/RunButton" to="." method="_on_run_pressed"]
